<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_Splash"
        android:textColor="@color/colo_main"
        android:fontFamily="@font/yeseva_one"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Title_SignUp"
        android:textColor="@color/colo_main"
        android:textSize="16sp"
        android:fontFamily="@font/lato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="165dp"
        android:layout_height="22dp"
        android:fontFamily="@font/yeseva_one"
        android:text="Choose Your Location "
        android:textColor="@color/colo_main"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_margin="12dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="57dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:background="@drawable/background_edittext"
            app:endIconDrawable="@drawable/arrow_down"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <AutoCompleteTextView
                android:id="@+id/listOfLocation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/lato"
                android:hint="Choose Location"
                android:paddingLeft="15dp"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/nameAccount"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="8dp"
        android:hint="Nhập tên tài khoản"
        android:textSize="16sp"
        android:fontFamily="@font/lato"
        android:textColor="#3B3B3B"
        android:background="@drawable/background_edittext"
        android:drawableLeft="@drawable/user"
        android:drawablePadding="10dp"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <EditText
        android:id="@+id/restaurantName"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_edittext"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Nhập tên nhà hàng"
        android:drawableLeft="@drawable/mail"
        android:paddingLeft="15dp"
        android:drawablePadding="10dp"
        android:fontFamily="@font/lato"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/nameAccount"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nameAccount"
        app:layout_constraintTop_toBottomOf="@+id/nameAccount" />

    <EditText
        android:id="@+id/emailOrPhone"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_edittext"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Nhập email hoặc số điện thoại"
        android:drawableLeft="@drawable/mail"
        android:paddingLeft="15dp"
        android:drawablePadding="10dp"
        android:fontFamily="@font/lato"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/nameAccount"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nameAccount"
        app:layout_constraintTop_toBottomOf="@+id/restaurantName" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:ems="10"
        android:layout_marginTop="8dp"
        android:inputType="textPersonName"
        android:hint="Mật khẩu"
        android:drawableRight="@drawable/eye_hide"
        android:paddingRight="10dp"
        android:paddingLeft="15dp"
        android:drawablePadding="10dp"
        android:fontFamily="@font/lato"
        android:textSize="16sp"
        android:background="@drawable/background_edittext"
        android:drawableLeft="@drawable/ic_password"
        app:layout_constraintEnd_toEndOf="@+id/emailOrPhone"
        app:layout_constraintStart_toStartOf="@+id/emailOrPhone"
        app:layout_constraintTop_toBottomOf="@+id/emailOrPhone" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:background="@drawable/cta_button"
        android:fontFamily="@font/yeseva_one"
        android:padding="3dp"
        android:layout_marginTop="8dp"
        android:text="Tạo tài khoản"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/already_have_an_Account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/already_Have_An_Account"
        android:textSize="13sp"
        android:fontFamily="@font/lato"
        android:textColor="#BB0C24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />
</androidx.constraintlayout.widget.ConstraintLayout>